syntax = "proto3";
package cio.fdb.record.grpc;
option java_package = "cio.fdb.record.grpc";
option go_package = "cio/fdb/grpc/protos";


import "google/protobuf/descriptor.proto";
import "google/protobuf/struct.proto";
import "record_metadata.proto";
import "filters.proto";

message FDBRemoteSessionRequest{
    int64 client_id = 1;
}

message FDBRemoteSessionHandle{
    int64 id = 1;
}

message FDBDirectory{
    string name = 1;
    string value = 2;
    optional FDBDirectory sub_directory = 3;
}

message FDBRemoteRecordStoreRequest{
    FDBRemoteSessionHandle session = 1;
    google.protobuf.FileDescriptorProto metadata = 2;
    FDBDirectory key_space =3;
}

message FDBRemoteRecordStoreHandle{
    int64 id = 1;
    FDBRemoteSessionHandle session = 2;
    com.apple.foundationdb.record.DataStoreInfo store = 3;
}
message FDBRemoteSessionCommitRequest{
    FDBRemoteSessionHandle session = 1;
}


message FDBSaveRecordCommand{
    FDBRemoteRecordStoreHandle store = 1;
    string table = 2;
    bytes record = 3;
}
message FDBSaveRecordResult{
    bytes record = 1;
}

message FDBDeleteRecordCommand{
    FDBRemoteRecordStoreHandle store = 1;
    bytes record_id = 2;
}
message FDBDeleteRecordResult{
    bool result = 1;
}
message FDBLoadRecordsCommand{
    FDBRemoteRecordStoreHandle store = 1;
    string table = 2;
    BooleanQuery query = 3;
}
enum TransactionCommitResult{
    TRANSACTION_SUCCESS = 0;
    TRANSACTION_NOT_ACTIVE = 1;
    TRANSACTION_FAILED = 2;
}
message FDBRemoteSessionCommitResponse{
    TransactionCommitResult result = 1;
    optional string error = 2;
}

message FDBDumpAllCommand{
    optional bytes start = 1;
    optional bytes end = 2; 
}
message FDBDumpAllResponseBatch{
    message KV {
        bytes key = 1;
        bytes value = 2;
      }
    repeated KV data = 7;
}


message FDBLoadMetadataCommand{
    repeated string path=1;
}
message FDBRegisterSchemaCommand{
    repeated string path = 1;
    google.protobuf.FileDescriptorProto schema = 2;
}
message FDBLoadMetadataResponse{
    com.apple.foundationdb.record.MetaData metadata = 1;
}

message KeysList{
    repeated bytes keys = 1;
}
message RecordsList{
    repeated bytes records = 1;
}
message FDBTransactionError{
    int32 code = 1;
    optional string error = 2;
}
message FDBCRUDCommand{
    string table = 1;
    enum OPERATION{
        CREATE=0;
        LOAD=1;
        DELETE=2;
    }
    OPERATION operation = 10;
    oneof data {
        KeysList keys = 16;
        RecordsList records = 20;
        BooleanQuery query = 24;
    }
}
message FDBCRUDResponse{
    oneof data{
        KeysList keys = 8;
        RecordsList records = 16;
        bool success = 32;
        FDBTransactionError error = 64;
    }
}


service FDBRemoteCRUD {
    rpc LoadMetadata(FDBLoadMetadataCommand) returns (FDBLoadMetadataResponse){}
    rpc RegisterSchema(FDBRegisterSchemaCommand) returns (FDBLoadMetadataResponse) {}
    rpc execute( FDBCRUDCommand) returns (FDBCRUDResponse) {}
}

service FDBRemoteInteractiveSession {
    rpc NewSession(FDBRemoteSessionRequest) returns (FDBRemoteSessionHandle) {}
    rpc NewRecordStore (FDBRemoteRecordStoreRequest) returns (FDBRemoteRecordStoreHandle) {}
    rpc commit (FDBRemoteSessionCommitRequest) returns (FDBRemoteSessionCommitResponse){}
    rpc SaveRecord (FDBSaveRecordCommand) returns (FDBSaveRecordResult) {}
    rpc DeleteRecord (FDBDeleteRecordCommand) returns (FDBDeleteRecordResult) {}
    rpc loadRecords(FDBLoadRecordsCommand) returns( stream FDBSaveRecordResult){}
    rpc GetDump(FDBDumpAllCommand) returns (stream FDBDumpAllResponseBatch) {}
}
